--- a/src/Pokemon.css
+++ b/src/Pokemon.css
@@ -4,6 +4,10 @@
     font-family: 'Press Start 2P', cursive;
   }
   
+  .Pokemon h1 {
+    font: 60px/75px 'Press Start 2P', cursive;
+  }
+
   .Pokemon .logo {
     width: 100%;
     max-width: 500px;
